--- a/Views/Book/GetAllBooks.cshtml
+++ b/Views/Book/GetAllBooks.cshtml
@@ -1,21 +1,37 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@* @model IEnumerable<BookModel> *@
 @{
 }
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
-<DOCTYPE html>
-    <html>
-    <head>
-        <meta name="viewport" content="width-device-width" />
-        <title>GetAllBooks</title>
-    </head>
-    <body>
-        <h1>All book list</h1>
-        <button> click me</button>
-    </body>
-</html>
-</DOCTYPE>
+
+<div class="container">
+    <h3 class="display-4">All book list</h3>
+    <div class="row">
+        @foreach(var book in Model)
+        {
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <svg class="card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                    <div class="card-body">
+                        <h3 class="card-title">@book.Title</h3>
+                        <p class="card-text">@book.Description</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a asp-controller="book" asp-action="getbook" asp-route-id="@book.Id" class="btn btn-sm btn-outline-secondary">View details</a>
+                            </div>
+                            <small class="text-muted">@book.Author</small>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+        
+    </div>
+</div>
+
