--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -1,10 +1,11 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+
 @{
     Layout = "_Layout";
-    //ViewData["TItle"] = "AboutUs";
+    ViewData["Title"] = "ContactUs";
 }
 
+<h1>Hello from contact us page</h1>
 
-<h1>This is the about page of application</h1>
