--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,32 +2,207 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    Layout = null;
+    //dynamic data = ViewBag.Data;
+    var bookInfo = ViewData["Book"] as BookModel;
+    //ViewData["Title"] = "Home";
 }
+<section class="jumboton text-center">
+    <div class="container">
+        <h1>Welcome to BookStore @ViewData["property1"], Author - @bookInfo.Author Custom: @ViewData["CustomProperty"]</h1><br/>
+        <p class="lead text-muted">
+            Những cuốn sách hay nên đọc khi còn trẻ được định nghĩa là là những cuốn sách kinh điển nhất mọi thời đại. Sách được viết bởi những tác giả trẻ, những bộ óc văn học vĩ đại nhất, họ có những chủ đề, nhân vật, kinh nghiệm, cảm xúc và quan điểm sống luôn liên quan đến mỗi người chúng ta. Một số trong số họ là nguồn cảm hứng mà từ đó toàn bộ thể loại tiểu thuyết hay đã nảy sinh từ đó.
+        </p>
+        <p>
+            <a href="#" class="btn btn-primary my-2">Search Books</a>
+        </p>
+    </div>
+    <div class="py-5 bg-light">
+        <div class="container">
+            <h3 class="h3">Top Books</h3>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
 
-<DOCTYPE html>
-    <html>
-        <head>
-        <meta name="viewport" content = "width-device-width"/>
-        <title>Index</title>
-        <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
-        <link href="~/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="~/lib/twitter-bootstrap/css/bootstrap.rtl.css" rel="stylesheet" />
-        <link href="~/lib/twitter-bootstrap/css/bootstrap.rtl.min.css" rel="stylesheet" />
-        </head>
-        <body class="container">
-        <input type="button" value="click me" class="btn btn-danger"/>
-        <h1 class="m-xxl-5">Welcome to book store application</h1>
-        <img src="~/images/img.jpg" class="logo"/>
-        </body>
-    <script src="~/lib/jquery/jquery.js"></script>
-    <script src="~/lib/jquery/jquery.min.js"></script>
-    <script src="~/lib/jquery/jquery.slim.js"></script>
-    <script src="~/lib/jquery/jquery.slim.min.js"></script>
-    </html>
-    <script>
-        $(document).ready(function () {
-            alert("page loaded");
-        });
-    </script>
-</DOCTYPE>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-4 shadow-sm">
+                        <svg class="bg-danger card-img-top" width="100%" height="225" src="~/img/svg1.svg"></svg>
+                        <div class="card-body">
+                            <p class="card-text">This section will be used to display the short description about book</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">Author Name</small>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+@section scripts{
+<script>
+    $(document).ready(function () {
+        //alert("document is ready");
+    })
+</script>
+}
